syntax = "proto3";

option php_metadata_namespace = "\\";

message NoNamespaceMessage {
  int32 a = 1;

  enum NestedEnum {
    ZERO = 0;
  }
  NestedEnum b = 2;
  repeated NestedEnum c = 3;

  // Test nested messages
  NestedMessage d = 4;
  message NestedMessage {
    NestedMessage nested_message = 2;

    message NestedMessage {
        int32 a = 1;
    }
  }
}

enum NoNamespaceEnum {
  VALUE_A = 0;
  VALUE_B = 1;
}
